# PyQBench

./: .pre-commit-config.yaml  Hadamard example.ipynb  README.md  async_resolved.yml  async_results.csv  async_results.yml  async_results_ideal.csv  pyproject.toml  pyqbench.bib  setup.cfg  sync_backend.yml  sync_results.csv  sync_results.yml
.github/workflows/: quality_checks.yml
adr/: async_backends.md  backend_factory_model.md  fourier-discrimination-cli.md  general_form_of_the_cli.md  simple_backend_model.md
docs/source/: cli_usage.md  conf.py  index.md  installing.md  library_usage.md  mathematical_foundations.md  references.bib  tutorial.md
docs/source/_static/css/: custom.css
docs/source/notebooks/: Example 01 discriminating measurements in Hadamard basis.ipynb
docs/source/reference/: batching.md  cli.md  common_models.md  fourier.md  index.md  jobs.md  limits.md  logging.md  schemes.md  testing.md
examples/: backend-factory.yml  fourier-discrimination-async-result-aws.yml  fourier-discrimination-async-result.yml  fourier-discrimination-experiment.yml  fourier-discrimination-result-with-mitigation.yml  fourier-discrimination-result.yml  simple-backend-with-run-options.yml  simple-backend.yml  using_fourier_with_simulator.py  using_fourier_with_simulator_postselection_all_cases.py  using_fourier_with_sumilator_postselection.py
examples/backends/: backend-factory-with-run-options.yml  ibmq-backend.yml  ibmq-qasm-simulator-async.yml  ibmq-qasm-simulator-sync.yml  ibmq-quito.yml
examples/experiments/: experiment_file.yml  fourier-disc-direct-sum-ibmq.yml  fourier-disc-postselection-ibmq.yml  fourier-discrimination-experiment.yml
examples/mytest/: fourier-disc-direct-sum-ibmq.yml  output-for-good-and-bad-connection.yml  output.yml  resolve-output-for-good-and-bad-connection.yml
examples/results/: fourier-discrimination-result-with-mitigation.yml
examples/tabulate/: sync_results_ideal.csv
ibmq-experiments/: generate_experiments.py  run_experiments.py  test_batch_washington.yml
ibmq-experiments/backends/: ibm-auckland.yml  ibm-caoiro.yml  ibm-geneva.yml  ibm-hanoi.yml  ibm-nairobi.yml  ibm-oslo.yml  ibm-washington.yml  ibmq-belem.yml  ibmq-kalkota.yml  ibmq-lima.yml  ibmq-manila.yml  ibmq-montreal.yml  ibmq-mumbai.yml  ibmq-quito.yml  ibmq-toronto.yml
ibmq-experiments/experiments/: fourier-disc-direct-sum.yml  fourier-disc-postselection.yml
ibmq-experiments/results/ibm-auckland/: fourier-disc-postselection.yml
ibmq-experiments/results/ibm-geneva/: fourier-disc-postselection.yml
mathematics/: optimal_final_measurement_discrimination.nb
qbench/: _expressions.py  backend_models.py  batching.py  cli.py  common_models.py  direct.py  direct_sum.py  fourier.py  jobs.py  limits.py  logging.py  mock_backend.py  models.py  postselection.py  postselection_all_cases.py  simplified_postselection.py  testing.py  utils.py
qbench/fourier/: __init__.py  _cli.py  _components.py  _experiment.py  _experiment_runner.py  _generic.py  _ibmq.py  _initial_state.py  _lucy.py  _lucy_and_ibmq_common.py  _models.py  _rigetti.py  experiment_runner.py  testing.py
qbench/fourier/_components/: __init__.py  _generic.py  _ibmq.py  _lucy.py  _lucy_and_ibmq_common.py  _rigetti.py
qbench/schemes/: _utils.py  direct_sum.py  postselection.py
tests/: conftest.py  test_batching.py  test_direct.py  test_direct_sum.py  test_fourier.py  test_fourier_cli.py  test_fourier_experiment_runner.py  test_fourier_ibmq.py  test_fourier_lucy.py  test_fourier_rigetti.py  test_ibmq_backend.py  test_jobs.py  test_limits.py  test_mock_simulator.py  test_models.py  test_postselection.py  test_postselection_all_cases.py  test_simplified_postselection.py  test_utils.py
tests/fourier/: test_fourier.py  test_fourier_cli.py  test_fourier_experiment_runner.py  test_fourier_ibmq.py  test_fourier_lucy.py  test_fourier_rigetti.py
tests/schemes/: test_direct_sum.py  test_postselection.py
