[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "setuptools_scm[toml]>=3.4",
    "setuptools_scm_git_archive"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyqbench"
description = "Library for benchmarking gate computers"
readme = "README.md"
authors = [
    {name="Paulina Lewandowska", email="plewandowska@iitis.pl"},
    {name="Konrad Jałowiecki", email="dexter2206@gmail.com"},
    {name="Aleksandra Krawiec", email="aaleksandra.krawiec@gmail.com"},
    {name="Łukasz Pawela", email="lukasz.pawela@gmail.com"},
]
license = {text="Apache-2.0"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics"
]
requires-python = ">=3.8"
dependencies = [
    "numpy ~= 1.22.0",
    "scipy ~= 1.7.0",
    "pandas ~= 1.5.0",
    "amazon-braket-sdk >= 1.11.1",
    "pydantic > 1.9.1",
    "qiskit ~= 0.37.2",
    "mthree ~= 1.1.0",
    "tqdm ~= 4.64.1",
    "pyyaml ~= 6.0",
    "qiskit-braket-provider ~= 0.0.3"
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=6.1.2", "pytest-mock>=3.3.1", "pytest-cov>=2.12.1"]
dev = ["flake8>=4.0.1", "black>=21.12b0", "isort>=5.10.1", "mypy>=0.982"]
docs = [
    "sphinx>=5.3.0",
    "pydata-sphinx-theme>=0.11.0",
    "sphinx_math_dollar>=1.2.1",
    "myst_nb~=0.17.1",
    "iplantuml~=0.1.1",
    "sphinxcontrib-bibtex~=2.5.0",
    "sphinx-design~=0.3.0"
]

[project.scripts]
qbench = "qbench.cli:main"

[project.urls]
"Source Code" = "https://github.com/iitis/PyQBench"

[tool.setuptools.packages]
find = {exclude = ["tests"]}

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
)/
'''

[tool.setuptools_scm]

[tool.mypy]
plugins = "pydantic.mypy"
