[metadata]
name = pyqbench
description = Library for benchmarking gate computers
long_description = file: README.md
long_description_content_type = text/markdown
author = Paulina Lewandowska, Konrad Jałowiecki, Łukasz Pawela
author_email = dexter2206@gmail.com
license = Apache-2.0
url = https://github.com/iitis/PyQBench
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >= 3.8

[options.extras_require]
test = pytest>=6.1.2; pytest-mock>=3.3.1; pytest-cov>=2.12.1
dev = flake8>=4.0.1; black>=21.12b0; isort>=5.10.1

[options.packages.find]
exclude = tests
